--- a/SafeGuard/app/src/main/res/layout/activity_main.xml
+++ b/SafeGuard/app/src/main/res/layout/activity_main.xml
@@ -32,10 +32,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
-        android:layout_margin="16dp"
+        android:layout_margin="8dp"
         android:contentDescription="mic"
-        app:srcCompat="@android:drawable/ic_btn_speak_now"
-        app:tint="@android:color/white"
+        app:srcCompat="@drawable/voicewave"
         android:elevation="8dp"
         android:onClick="startButton"/>
 
