--- a/SafeGuard/app/src/main/res/drawable/ic_add_contact.xml
+++ b/SafeGuard/app/src/main/res/drawable/ic_add_contact.xml
@@ -7,7 +7,7 @@
 
     <!-- Background circle -->
     <path
-        android:fillColor="#6A1B9A"
+        android:fillColor="#E91E63"
         android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2z" />
 
     <!-- Person icon (head and shoulders) -->
